syntax = "proto3";

package io.harness.pms.steps.io;

option java_multiple_files = true;

import "io/harness/pms/execution/failure/failure_info.proto";
import "io/harness/pms/execution/status.proto";
import "io/harness/pms/steps/io/step_outcome_proto.proto";

message StepResponseProto {
  execution.Status status = 1;
  repeated StepOutcomeProto stepOutcomes = 2;
  execution.failure.FailureInfo failureInfo = 3;
}
